<?xml version="1.0"?>
<package format="2">
  <name>turtlebot_walker</name>
  <version>0.0.0</version>
  <description>The turtlebot_walker package</description>
  <maintainer email="skotasai@umd.edu">sandeep</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <export>
  </export>

</package>
